fix spacing

--- a/frontend/src/stylesheets/components/_calendar.scss
+++ b/frontend/src/stylesheets/components/_calendar.scss
@@ -221,7 +221,7 @@
 
     & > div:last-child {
         margin-top: 12px;
-        padding-bottom: 34px;
+        padding-bottom: 24px;
     }
 }
 
@@ -295,7 +295,7 @@
     flex: 1;
     display: flex;
     flex-direction: column;
-    padding: 34px 0px;
+    padding: 24px 0px;
     border-top: 1px dashed rgb(218, 218, 218);
 
     h1 {
